--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "dayjs": "^1.11.5",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "mixwith": "^0.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -74,8 +76,15 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "babel-plugin-named-exports-order": "^0.0.2",
     "prop-types": "^15.8.1",
     "webpack": "^5.74.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/index.js"
+    ]
   }
 }
