--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "dayjs": "^1.11.5",
+    "material-components-web": "^14.0.0",
     "mixwith": "^0.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -25,6 +26,7 @@
     "rxjs-react": "^0.2.0",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
+    "typescript-search": "^1.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
